--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.4.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
 }
