--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-coverage": "npx hardhat coverage",
+    "build": "npx hardhat compile",
+    "test": "npx hardhat test"
   },
   "keywords": [],
   "author": "",
