--- a/.github/node.yml
+++ b/.github/node.yml
@@ -15,7 +15,7 @@ jobs:
                 node-version: 12
             - name: Build and test
               run:
-                - npm install -g npx
                 - npm install
                 - npm run build
                 - npm run test
+                - npm run test-coverage
